# python_sample_test

./: README.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml
src/: main.py
test/: test_main.py
