[project]
name = "python_test_dir_2"
version = "0.1.0"
description = "Small test project for pytest"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "coverage==7.13.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["test"]
